chore: update address controller when migrate with new ls schema